2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartPanel.java
	(defaultDirectoryForSaveAs): New field,
	(ChartPanel(JFreeChart, int, int, int, int, int, int, boolean, boolean,
	boolean, boolean, boolean, boolean)): Initialise new field,
	(getDefaultDirectoryForSaveAs): New method,
	(setDefaultDirectoryForSaveAs): Likewise,
	(doSaveAs): Apply default directory.
	
2007-10-24  David Gilbert  <david.gilbert@object-refinery.com>

	* experimental/org/jfree/experimental/chart/plot/dial/DialPlot.java
	(pointers): New field,
	(DialPlot): Delegate to new constructor,
	(DialPlot(ValueDataset)): New constructor,
	(addPointer): New method,
	(getPointerIndex): Likewise,
	(removePointer(int)): Likewise,
	(removePointer(DialPointer)): Likewise,
	(getPointerForDataset): Likewise,
	(draw): Draw pointers in their own layer,
	(equals): Check new pointers field,
	* experimental/org/jfree/experimental/chart/plot/dial/DialPointer.java:
	Implemented PublicCloneable,
	(DialPointer): Changed to protected,
	(DialPointer(int)): Likewise, and changed default radius,
	(Pin.setPaint): Added argument check,
	(Pin.setStroke): Likewise,
	(Pointer(int)): Removed radius setting,
	* experimental/org/jfree/experimental/chart/plot/dial/DialTextAnnotation.java
	(getAnchor): New method,
	(setAnchor): Likewise,
	* experimental/org/jfree/experimental/chart/plot/dial/DialValueIndicator.java
	(DialValueIndicator): New constructor,
	(DialValueIndicator(int, String)): Removed string argument,
	(setDatasetIndex): Fire change event,
	(setTemplateValue): Check for null argument,
	* experimental/org/jfree/experimental/chart/plot/dial/StandardDialFrame.java
	(setInnerRadius): Added argument check,
	(setOuterRadius): Likewise,
	* experimental/org/jfree/experimental/chart/plot/dial/StandardDialRange.java
	(scaleIndex): New field,
	(StandardDialRange(double, double)): Added field initialisations,
	(getScaleIndex): New method,
	(setScaleIndex): Likewise,